# slurm2runai

./: CLAUDE.md  README.md  SETUP_JOURNEY.md  dp1.yaml  pyproject.toml  test_local.py  test_nvidia_smi.sh  test_nvidia_smi.yaml  test_runai_submit.py
.github/workflows/: publish-pypi.yml
docs/: README.md  api.md  architecture.md  deployment.md  troubleshooting.md
docs/run-ai/: index.md
docs/run-ai/ai-applications/: ai-applications.md  introduction-to-ai-applications.md
docs/run-ai/getting-started/: installation.md  overview.md  quick-starts.md  whats-new.md
docs/run-ai/infrastructure-setup/: advanced-setup.md  authentication.md  procedures.md
docs/run-ai/platform-management/: aiinitiatives.md  monitor-performance.md  policies.md  runai-scheduler.md
docs/run-ai/reference/: cli.md
docs/run-ai/reference/cli/: install-cli.md  (+3 more)
docs/run-ai/settings/: general-settings.md  user-settings.md
docs/run-ai/tutorials/: blueprint-tutorials.md  inference-tutorials.md  training-tutorials.md
docs/run-ai/workloads-in-nvidia-run-ai/: assets.md  introduction-to-workloads.md  submit-via-yaml.md  using-inference.md  using-training.md  using-workspaces.md  workload-templates.md  workload-types.md  workloads.md
examples/: README.md  example_slurm.sh  pytorch_simple.sub  pytorch_singularity_example.sub  pytorch_venv_example.sub  r_calculation.slurm
lambda/: README.md  cloudformation-template.yaml  deploy.sh  lambda_function.py  requirements.txt  template.yaml
s2r/: __init__.py  auth.py  cli.py  converter.py  env.py  runai_api.py
tests/: test_auth.py  test_converter.py
(+396 files in other folders)
